<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/card_view"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="25dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/county_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:text="@string/county_item_name"
                        android:textColor="@color/dark_text"
                        android:textSize="24sp"
                        android:textAlignment="center"
                        >

                    </TextView>

                    <!-- android:layout_marginBottom="10dp"  -->

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_risk"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="24sp"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/risk_degree"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_risk_degree"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="5dp"
                        android:textColor="@color/Gold"
                        android:textSize="24sp"
                        >

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_district"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/district_name"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_actual_district"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_incidence"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/incidence"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_actual_incidence"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_incidence_range"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/incidence_interval"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_actual_incidence_range"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_last_update"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                    <TextView
                        android:id="@+id/last_update"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/county_item_actual_last_update"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/dark_text"
                        android:textSize="16sp"
                        >

                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>