<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:ignore="NestedWeights"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/card_view"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        card_view:cardCornerRadius="20dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:baselineAligned="false">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="2"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        >

                        <ImageView
                            android:id="@+id/test_photo"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/ic_baseline_sample_image_24"
                            >

                        </ImageView>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_marginStart="30dp"
                        android:layout_weight="6"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:layout_marginTop="20dp"
                            android:layout_weight="5"
                            tools:ignore="NestedWeights">

                            <TextView
                                android:id="@+id/test_item_date"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="25sp"
                                android:textColor="@color/dark_text"
                                android:text="@string/test_item_date"
                                android:tag=""
                                >

                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:orientation="horizontal"
                            android:layout_marginTop="5dp"
                            android:layout_marginBottom="20dp"
                            android:layout_weight="5">

                            <TextView
                                android:id="@+id/test_item_result"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textSize="18sp"
                                android:textColor="@color/dark_text"
                                android:text="@string/test_item_result">
                            </TextView>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="2"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="25dp"
                        android:layout_marginBottom="25dp"
                        >

                        <ImageButton
                            android:id="@+id/info_icon_btn"
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="7"
                            android:gravity="center"
                            android:src="@drawable/ic_baseline_info_24"
                            android:background="@color/card_view"
                            card_view:tint="@color/dark_text">
                        </ImageButton>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="0dp"
                            android:layout_weight="3"
                            android:gravity="center"
                            android:text="@string/test_item_more_info_button"
                            android:textColor="@color/dark_text"
                            >

                        </TextView>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>